salesforce-project-manager/force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>費用</label>
    <pluralLabel>費用</pluralLabel>
    <nameField>
        <label>費用番号</label>
        <type>AutoNumber</type>
        <displayFormat>EXP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>プロジェクトに紐づく費用・経費を管理するオブジェクト。予算管理に使用する。</description>
</CustomObject>