salesforce-project-manager/force-app/main/default/objects/Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額</label>
    <description>この費用レコードの金額</description>
    <inlineHelpText>費用の金額を円（JPY）で入力してください</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>