salesforce-project-manager/force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>費用カテゴリ</label>
    <description>費用の種別・分類</description>
    <inlineHelpText>この費用の種類を選択してください（例：人件費、外注費など）</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>人件費</fullName>
            </value>
            <value>
                <fullName>外注費</fullName>
            </value>
            <value>
                <fullName>設備・備品</fullName>
            </value>
            <value>
                <fullName>交通・出張</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <default>true</default>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>