salesforce-project-manager/force-app/main/default/objects/Expense__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <label>費用発生日</label>
    <description>費用が実際に発生した日付</description>
    <inlineHelpText>費用が発生した日付を入力してください</inlineHelpText>
    <type>Date</type>
</CustomField>