salesforce-project-manager/force-app/main/default/objects/Expense__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>プロジェクト</label>
    <description>この費用が発生した親プロジェクトへのリンク</description>
    <inlineHelpText>この費用が属するプロジェクトを選択してください</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>費用</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>